Share common WebError implementation https://bugs.webkit.org/show_bug.cgi?id=183303

Reviewed by Ryosuke Niwa.

* Shared/WebErrors.cpp:
(WebKit::cancelledError):
(WebKit::fileDoesNotExistError):
* Shared/glib/WebErrorsGlib.cpp: Removed.
* SourcesGTK.txt:
* SourcesWPE.txt:


Canonical link: https://commits.webkit.org/198976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229193 268f45cc-cd09-0410-ab3c-d52691b4dbfc